# Parallel-programming

./: Manager.h
Additional-tasks/: CMakeLists.txt  e-task.cpp  result
Base-tasks/: Task-1.cpp  Task-2.cpp  Task-3.cpp
